# TicTacToe

./: CMakeLists.txt  README.md
include/: game.hpp
src/: CMakeLists.txt  game.cpp  main.cpp
src/client/: CMakeLists.txt  game.cpp  main.cpp  network.cpp  state.cpp
src/client/include/: game.hpp  network.hpp  state.hpp
src/server/: CMakeLists.txt  server.cpp
src/server/include/: states.hpp
src/shared/: CMakeLists.txt  shared.cpp  shared_test.cpp
src/shared/include/: shared.hpp
